[project]
name = "rx-validator-env"
version = "1.0.0"
description = "Prescription validation OpenEnv environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_id = "rx-validator-env"
entry_point = "server.app:main"
